crates/styx-tree/src/snapshots/styx_tree__diagnostic__tests__unclosed_object_diagnostic.snap
---
source: crates/styx-tree/src/diagnostic.rs
expression: stripped
---
Error: unclosed object
   ╭─[ test.styx:1:8 ]
   │
 1 │ server {
   │        ┬  
   │        ╰── object opened here
   │ 
   │ Help: add a closing '}'
───╯
